# Capstone-Project

./: .env.example  .gitignore  KAGGLE_WRITEUP.md  README.md  pyproject.toml
adk_app/: __init__.py  agent.py
backend/: __init__.py  adk_agent.py  adk_runtime.py  agent_skills.py  analytics.py  data_loader.py  demo_data.py  gemini_client.py  investigator.py  main.py  mcp_server.py  models.py  report.py
data/demo/: activations.csv  feature_flags.csv  onboarding_events.csv  releases.csv  support_tickets.csv  users.csv
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  api.ts  styles.css  types.ts
tests/: conftest.py  test_adk_agent.py  test_agent_skills.py  test_analytics.py  test_api.py  test_data_loader.py  test_gemini_client.py  test_investigator.py  test_report.py
