[project]
name = "activation-drop-investigator"
version = "0.1.0"
description = "Evidence-first SaaS activation drop investigation agent for Kaggle AI Agents capstone."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "pandas>=2.2,<3",
  "pydantic>=2.8,<3",
  "python-multipart>=0.0.9,<1",
  "mcp>=1.27,<2",
]

[project.optional-dependencies]
adk = ["google-adk>=1.0"]
dev = ["pytest>=8.2,<9", "httpx>=0.27,<1", "ruff>=0.5,<1"]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["backend"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
